--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <h1>Refresh Me</h1>
             <div class="dice">
                 <p>Player 1</p>
-                <img class="img1" src="./images/dice-six-faces-six.png"/>
+                <img class="img1" src="./images/dice-six-faces-6.png"/>
             </div>
             <div class="dice">
                 <p>Player 2</p>
-                <img class="img2" src="./images/dice-six-faces-six.png"/>
+                <img class="img2" src="./images/dice-six-faces-6.png"/>
             </div>
         </div>
 
         <footer>🎲 App Brewery - malys23 🎲</footer>
-        <script href="./index.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
